Backport to ranger-2.10: JDK8-compatible SPIFFE unit tests
Replace List.of and Files.writeString with JDK8 equivalents for docker
build on ranger-base JDK8.